--- a/regolamento.tex
+++ b/regolamento.tex
@@ -25,6 +25,7 @@
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
 \usepackage{hyperref}
+\usepackage[dvipsnames]{color}
 %\usepackage{fourier} % Use the New Century Schoolbook font
 
 %----------------------------------------------------------------------------------------
@@ -84,8 +85,8 @@
 		@georgianiandrei \\
 		@mrbrionix \\
 		@aconithorn \\
-		
-		} % Editor list
+		@gbitgbit \\
+		} % Admin list
 	
 	\vspace{3\baselineskip} % Whitespace below the editor list
 	
@@ -110,6 +111,22 @@
 %	REGOLAMENTO
 %----------------------------------------------------------------------------------------
 
+\textcolor{red}{\ttfamily{\textsl{{\Large Perchè abbiamo introdotto un regolamento?}}}}\\
+
+Vogliamo rendere chiari i motivi per cui abbiamo deciso di regolamentare i gruppi del nostro network.
+Abbiamo notato che la maggior parte di essi erano tempestati di domande banali, fatte più volte al giorno, la cui risposta era facilmente trovabile. 
+Questo riduce la qualità della chat e scoraggia la partecipazione di studenti più attenti. Per questo motivo abbiamo deciso di provare a limitare il fenomeno, 
+da una parte ammonendo chi continua a fare interventi non produttivi, e dall'altra fornendo un modo facile e veloce per trovare le informazioni più importanti, 
+tramite le pagine FAQ di ogni insegnamento.\\
+
+\textbf{Dove trovo le pagine FAQ dei corsi?}\\
+
+Nei prossimi mesi adotteremo una strategia per far sì che ogni corso abbia una pagina relativa alle domande fatte più frequentemente.
+Per il momento sarebbe l'ideale limitare comunque il fenomeno delle domande ripetute più volte semplicemente chiedendovi di cercare nelle chat precedenti.
+Telegram permette di farlo in modo efficiente e veloce, quindi siete pregati di provare a farlo prima di porre domande; ovviamente nel caso in cui non ci sia la risposta che cercate siete liberi di chiedere in chat.\\\\
+Nella prossima pagina è possibile trovare il regolamento.
+
+\newpage
 
 \begin{enumerate}
 \rmfamily
@@ -120,7 +137,8 @@
 	Dopo 3 warn l'utente viene mutato per un giorno, a discrezione degli amministratori.\\
 	
 	\textbf{Domanda riguardo informazioni banali e già chieste\\ precedentemente nella chat}\\
-	Nessuna penalità se è presente una FAQ del gruppo del relativo corso, altrimenti vale la regola precedente.
+	Nessuna penalità se non sono presenti le FAQ del gruppo del relativo corso, altrimenti vale la regola precedente, ovvero: l'utente riceve un warn con successiva 					indicazione della presenza delle FAQ. Dopo 3 warn viene mutato per un giorno, a discrezione degli amministratori.\\
+	È ovviamente consigliato (nel caso non ci fossero ancora le FAQ di quel corso) di controllare i messaggi precedenti per scoprire se è già stata data risposta alla vostra domanda.
 	
 \rule{\linewidth}{0.1mm}
 
@@ -129,14 +147,19 @@
 	\textbf{Bestemmie e linguaggio vivace}\\
 	Entrambi permessi finchè non diventa spam: in quel caso l'utente verrà mutato per un certo periodo di tempo a discrezione degli amministratori.\\
 	
-	\textbf{Spam e offtopic}
+	\textbf{Insulti e offese}\\
+	Sono entrambi vietati, pena warn per gli insulti leggeri, mute o ban per quelli più pesanti, a discrezione degli amministratori.\\
+	Una nota riguardo i docenti: si può benissimo criticare (nei limiti del normale) ma non si accettano assolutamente insulti verso di essi.\\
 	
+	\textbf{Spam e offtopic}\\
 	Lo spam è vietato.\\
 	Le conversazioni offtopic sono vietate nei gruppi specifici dei corsi, mentre sono accettate nei gruppi generali degli anni accademici (a patto che non diventino eccessive).
 
 \rule{\linewidth}{0.1mm}
 	
 \end{enumerate}
+
+
 
 
 \end{document}
