--- a/regolamento.tex
+++ b/regolamento.tex
@@ -80,12 +80,12 @@
 	{  \scshape 
 		Per qualsiasi dubbio contattare\\ 
 		gli amministratori del network \break \\ 
-		@giuseppetm \\ 
-		@davidebusolin \\
-		@georgianiandrei \\
-		@mrbrionix \\
-		@aconithorn \\
-		@gbitgbit \\
+		@aconithorn - 3\textordmasculine \hspace{0.01cm} anno\\
+		@davidebusolin - 3\textordmasculine \hspace{0.01cm} anno\\
+		@giuseppetm - 3\textordmasculine \hspace{0.01cm} anno\\ 
+		@georgianiandrei - 2\textordmasculine \hspace{0.01cm} anno\\
+		@gbitgbit - 2\textordmasculine \hspace{0.01cm} anno\\
+		@mrbrionix - 2\textordmasculine \hspace{0.01cm} anno\\
 		} % Admin list
 	
 	\vspace{3\baselineskip} % Whitespace below the editor list
