Reti di Calcolatori + Deploy GH pages
- Aggiunge FAQ per Reti di calcolatori
- Cancella PDF dal repository
- Aggiunge Makefile e GH action per compilare e pubblicare il sito con i PDF

--- a/drive/drive.tex
+++ b/drive/drive.tex
@@ -27,6 +27,7 @@
 \usepackage{hyperref}
 \usepackage[dvipsnames]{color}
 %\usepackage{fourier} % Use the New Century Schoolbook font
+\usepackage[nodayofweek,ddmmyyyy]{datetime}
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
@@ -66,7 +67,7 @@
 	seguente indirizzo e-mail, specificando se si deve caricare solo in quella situazione, o in modo continuativo
 	(ad esempio studenti che registrano videolezioni e vogliono tenere il relativo corso aggiornato):\\
 	\textbf{matricoleunimiinformatica2017@gmail.com}\\
-	Per qualsiasi dubbio rivolgersi sempre all’indirizzo indicato.
+	Per qualsiasi dubbio rivolgersi sempre all'indirizzo indicato.
 
 	%------------------------------------------------
 	%	Subtitle
@@ -90,7 +91,7 @@
 	%	Publisher
 	%------------------------------------------------
 	
-	{\large Ultima modifica in data 28/09/2020} 
+	{\large Ultima modifica in data \today} 
 
 \end{titlepage}
 
