--- a/faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.tex
+++ b/faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.tex
@@ -1,15 +1,10 @@
-% Template FAQ del network stataleinformatica
-
 \documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc} 
-\usepackage{hyperref}
-\usepackage[dvipsnames]{color}
-\newcommand{\domanda}[1]{\item{\ttfamily{\textsl{{\large{#1}}}}\\\\}}
 
+\input{../pkgs}
+\input{../cmds}
 
 \title{FAQ - \textbf{Tecnologie e linguaggi web}}
-\date{Ultima modifica:  02/10/2020}
+\date{Ultima modifica:  \today}
 \author{Corso complementare\\6 CFU, Secondo semestre\\
 Docente: Paolo Ceravolo\\ 
 \href{https://pceravolopwm.ariel.ctu.unimi.it/v5/home/Default.aspx}{Sito web}}
