--- a/faq_files/template.tex
+++ b/faq_files/template.tex
@@ -1,15 +1,12 @@
 % Template FAQ del network stataleinformatica
 
 \documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc} 
-\usepackage{hyperref}
-\usepackage[dvipsnames]{color}
-\newcommand{\domanda}[1]{\item{\ttfamily{\textsl{{\large{#1}}}}\\\\}}
 
+\input{../pkgs}
+\input{../cmds}
 
 \title{FAQ - \textbf{Nome del corso}}
-\date{Ultima modifica:  data attuale}
+\date{Ultima modifica: \today}
 \author{Corso complementare / obbligatorio\\numero CFU, numero semestre\\
 Docente: nome docente\\ 
 \href{}{Sito web}}
@@ -30,8 +27,5 @@ Risposta \\
 Risposta \\
  
 \end{enumerate}
-
-
-
 
 \end{document}
