Aggiunte faq di "diritto dei prodotti digitali" e aggiornati i tex

--- a/faq_files/programmazione_2/programmazione_2.tex
+++ b/faq_files/programmazione_2/programmazione_2.tex
@@ -4,7 +4,7 @@
 \input{../cmds}
 
 \title{FAQ - \textbf{Programmazione II}}
-\date{Ultima modifica: \today}
+\date{}
 \author{
 	2$^{\circ}$ anno\\6 CFU, Primo semestre\\
 	Docente: Massimo Santini\\ 
