--- a/faq_files/sistemi_operativi/sistemi_operativi.tex
+++ b/faq_files/sistemi_operativi/sistemi_operativi.tex
@@ -4,7 +4,7 @@
 \input{../cmds}
 
 \title{FAQ - \textbf{Sistemi operativi}}
-\date{Ultima modifica: \today}
+\date{}
 \author{
 	2$^{\circ}$ anno\\12 CFU, Secondo semestre\\
 	Docente: Vincenzo Piuri\\ 
