--- a/faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.tex
+++ b/faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.tex
@@ -4,7 +4,7 @@
 \input{../cmds}
 
 \title{FAQ - \textbf{Tecnologie e linguaggi web}}
-\date{Ultima modifica:  \today}
+\date{}
 \author{Corso complementare\\6 CFU, Secondo semestre\\
 Docente: Paolo Ceravolo\\ 
 \href{https://pceravolopwm.ariel.ctu.unimi.it/v5/home/Default.aspx}{Sito web}}
