--- a/faq_files/template.tex
+++ b/faq_files/template.tex
@@ -6,10 +6,13 @@
 \input{../cmds}
 
 \title{FAQ - \textbf{Nome del corso}}
-\date{Ultima modifica: \today}
-\author{Corso complementare / obbligatorio\\numero CFU, numero semestre\\
-Docente: nome docente\\ 
-\href{}{Sito web}}
+
+\author{
+	Corso complementare / obbligatorio\\numero CFU, numero semestre\\
+	Docente: nome docente\\ 
+	\href{}{Sito web}
+	\date{}
+}
 
 \begin{document} 
 \maketitle
