Aggiunte faq di statistica e basi di dati

--- a/faq_files/reti_di_calcolatori/reti_di_calcolatori.tex
+++ b/faq_files/reti_di_calcolatori/reti_di_calcolatori.tex
@@ -4,13 +4,13 @@
 \input{../cmds}
 
 \title{FAQ - \textbf{Reti di Calcolatori}}
-\date{Ultima modifica: \today}
 \author{
 	3$^{\circ}$ anno\\12 CFU, Primo semestre\\
 	Docenti: Gian Paolo Rossi, Elena Pagani, Christian Quadri\\ 
 	Siti web:
 	\href{https://grossircc.ariel.ctu.unimi.it/v5/frm3/ThreadList.aspx?name=contenuti}{Teoria}
 	\href{https://epaganircl.ariel.ctu.unimi.it/v5/frm3/ThreadList.aspx?name=contenuti}{Laboratorio}
+	\date{}
 }
 
 \begin{document} 
