--- a/faq_files/template.tex
+++ b/faq_files/template.tex
@@ -17,18 +17,26 @@
 \begin{document} 
 \maketitle
 
-\begin{enumerate}
+\begin{QuestionList}
 
-\rmfamily
-\domanda{Dove si trova il sito web del corso?} 
-Si trova qui sopra se clicchi "sito web".\\
+    \question{Dove si trova il sito web del corso?} {
+        Si trova qui sopra cliccando "sito web".
+    }
 	
-\domanda{Domanda} 
-Risposta \\
+    \question{Domanda 2} {
+        Prima parte della risposta 
+        % Una riga vuota (senza commenti) cambia paragrafo, spaziondolo adeguatamente
 
-\domanda{Domanda} 
-Risposta \\
+        Seconda parte della risposta 
+
+        Conclusione 
+    }
+
+
+    \question{Domanda 3} {
+        Risposta 
+    }
  
-\end{enumerate}
+\end{QuestionList}
 
 \end{document}
