[FEATURE] Ported every FAQ to the new format with the QuestionList and question commands

--- a/faq_files/diritto_dei_prodotti_digitali/diritto_dei_prodotti_digitali.tex
+++ b/faq_files/diritto_dei_prodotti_digitali/diritto_dei_prodotti_digitali.tex
@@ -12,26 +12,28 @@
 }
 
 \begin{document} 
-	\maketitle
+
+\maketitle
 	
-	\begin{enumerate}
+\begin{QuestionList}
 		
-		\rmfamily
-		\domanda{Dove si trova il sito web del corso?} 
-		Lo trovi qui sopra se premi "sito web".\\
+    \question{Dove si trova il sito web del corso?} {
+        Si trova qui sopra cliccando "sito web".
+	}
 		
-		\domanda{Non riesco ad accedere al sito Ariel, cosa devo fare?} 
+	\question{Non riesco ad accedere al sito Ariel, cosa devo fare?} {
 		Si presume che tu sia di un altro corso di laurea diverso da comunicazione digitale e voglia inserire
-		questo corso come complementare a scelta libera. In tal caso, basta scrivere una mail al docente chiedendo 
-		di poter accedere al sito Ariel del corso.\\
+		questo corso come complementare a scelta libera. In tal caso, basta scrivere una mail al docente chiedendo di poter accedere al sito Ariel del corso.
+	}
 		
-		\domanda{Com'è strutturato l'esame?} 
-		L'esame consiste in uno scritto a risposte chiuse.\\
+		\question{Com'è strutturato l'esame?} {
+		    L'esame consiste in uno scritto di 20 domande a risposte chiuse, sia in presenza che da remoto.
+		}
 		
-		\domanda{Qual è il materiale a disposizione per studiare?} 
-		Sono disponibili le videolezioni del corso e le slide che potete trovare sul sito Ariel, 
-		insieme ai libri suggeriti dal docente.\\
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Sono disponibili le \href{https://www.youtube.com/channel/UCJRWh9Jp5G-_f8jvNtvtnwQ}{videolezioni del corso} e le slide che potete trovare sul sito Ariel, insieme ai libri suggeriti dal docente.
+		}
 		
-	\end{enumerate}
+	\end{QuestionList}
 	
 \end{document}
