--- a/faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.tex
+++ b/faq_files/tecnologie_e_linguaggi_web/tecnologie_e_linguaggi_web.tex
@@ -12,28 +12,28 @@ Docente: Paolo Ceravolo\\
 \begin{document} 
 \maketitle
 
-\begin{enumerate}
+\begin{QuestionList}
 
-\rmfamily
-\domanda{Dove si trova il sito web del corso?} 
-Si trova qui sopra se clicchi "sito web".\\
+	\question{Dove si trova il sito web del corso?} {
+		     Si trova qui sopra cliccando "sito web".
+		 }
 	
-\domanda{Com'è strutturato l'esame?} 
-C'è un orale diviso in due parti: la prima parte riguarda un paio di domande sulla teoria + svolgimento di esercizi, mentre la seconda parte
-è la presentazione del progetto sviluppato e discussione su di esso.\\
+    \question{Com'è strutturato l'esame?} {
+        C'è un orale diviso in due parti: la prima parte riguarda un paio di domande sulla teoria + svolgimento di esercizi, mentre la seconda parte è la presentazione del progetto sviluppato e discussione su di esso.
+    }
 
-\domanda{Qual è il materiale a disposizione per studiare?} 
-Ci sono le videolezioni registrate, e pdf per integrare. \\
+    \question{Qual è il materiale a disposizione per studiare?} {
+        Ci sono le videolezioni registrate, e pdf per integrare. 
+    }
 
-\domanda{La specifica del progetto va approvata dal docente?} 
-Sì, bisogna inviare una bozza al docente per vedere se l'idea è consona ai fini del corso.\\
+    \question{La specifica del progetto va approvata dal docente?} {
+        Sì, bisogna inviare una bozza al docente per vedere se l'idea è consona ai fini del corso.
+    }
 
-\domanda{Il progetto è difficile? Ha dei requisiti da rispettare?} 
-Il progetto deve rispettare alcuni requisiti specificati sul sito del corso, niente di troppo stringente, è perfettamente in linea con gli obiettivi del corso. Non bisogna sviluppare niente di troppo complicato, basta che rispetti i requisiti.
+    \question{Il progetto è difficile? Ha dei requisiti da rispettare?} {
+        Il progetto deve rispettare alcuni requisiti specificati sul sito del corso, niente di troppo stringente, è perfettamente in linea con gli obiettivi del corso. Non bisogna sviluppare niente di troppo complicato, basta che rispetti i requisiti.
+    }
  
-\end{enumerate}
-
-
-
+\end{QuestionList}
 
 \end{document}
