--- a/faq_files/basi_di_dati/basi_di_dati.tex
+++ b/faq_files/basi_di_dati/basi_di_dati.tex
@@ -14,22 +14,27 @@
 \begin{document} 
 	\maketitle
 	
-	\begin{enumerate}
+	\begin{QuestionList}
 		
-		\rmfamily
-		\domanda{Dove si trova il sito web del corso?} 
-		Lo trovi qui sopra se premi "sito web".\\
+		\question{Dove si trova il sito web del corso?} {
+		    Lo trovi qui sopra se premi "sito web".
+		}
 		
-		\domanda{Com'è strutturato l'esame?} 
-		Attualmente (via telematica) l'esame consiste in due prove (teoria e laboratorio) entrambe svolte
-		su exam.net. Ciascuna prova è di 90 minuti, e volendo possono essere fatte insieme.\\
 		
-		\domanda{Qual è il materiale a disposizione per studiare?} 
-		Sia per la teoria che per il laboratorio sono disponibili delle slide per integrare gli argomenti
-		spiegati a lezione. Ci sono anche eventuali libri suggeriti dai docenti.\\
+		\question{Com'è strutturato l'esame?} {
+		    Attualmente (via telematica) l'esame consiste in due prove (teoria e laboratorio) entrambe svolte
+		    su exam.net.
+		    
+		    Ciascuna prova è di 90 minuti e, volendo, possono essere fatte insieme.
+		}
 		
-
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Sia per la teoria che per il laboratorio sono disponibili delle slide per integrare gli argomenti
+		    spiegati a lezione. 
+		    
+		    Sono anche disponibili i libri suggeriti dai docenti, che si trovano sul relativo \href{https://aferrarabd.ariel.ctu.unimi.it/v5/home/Default.aspx}{sito web}
+		}
 		
-	\end{enumerate}
+	\end{QuestionList}
 	
 \end{document}
