--- a/faq_files/matematica_del_continuo/matematica_del_continuo.tex
+++ b/faq_files/matematica_del_continuo/matematica_del_continuo.tex
@@ -14,31 +14,38 @@
 \begin{document} 
 	\maketitle
 	
-	\begin{enumerate}
+	\begin{QuestionList}
 		
-		\rmfamily
+		\question{Dove si trova il sito web del corso?} {
+		     Si trova qui sopra cliccando "sito web".
+		 }
 		
-		\domanda{Dove si trova il sito web del corso?} 
-		Si trova qui sopra se clicchi "sito web".\\
+		\question{Come è strutturato l'esame?} {
+		    L'esame consiste in una prova scritta e in una prova orale da svolgersi nello stesso appello. 
+		    La prova scritta dura 2 ore ed è formata da due parti distinte (piu' la parte zero sui prerequisiti, che non tutti gli studenti devono sostenere).
+		    
+		    Piu informazioni su come sono composte le due parti sul \href{https://ccavaterramc.ariel.ctu.unimi.it/v5/home/Default.aspx}{sito del corso}.
+		}
 		
-		\domanda{Come è strutturato l'esame?}
-		L'esame consiste in una prova scritta e in una prova orale da svolgersi nello stesso appello. 
-		La prova scritta dura 2 ore ed è formata da due parti distinte. 
-		Piu info su come sono composte le due parti sull'ariel del corso.\\
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Sono disponibili le videolezioni con le relative slide, nonchè le esercitazioni.
+		    
+		    Il libro consigliato dalla docente è: "P. Marcellini e C. Sbordone, Calcolo, Liguori".
+		}
 		
-		\domanda{Qual è il materiale a disposizione per studiare?}
-		Sono disponibili le videolezioni con le relative slide, e anche delle esercitazioni.
-		Il libro consigliato dalla docente è: "P. Marcellini e C. Sbordone, Calcolo, Liguori".\\
+		\question{Quali sono le risorse consigliate?} {
+		    \begin{itemize}
+		        \item  \href{https://www.wolframalpha.com/}{Wolfram Alpha}, per controllare le soluzioni agli esercizi
 		
-		\domanda{Quali sono le risorse consigliate?}
-		- Wolfram Alpha (https://www.wolframalpha.com/)
+		        \item \href{https://www.geogebra.org/graphing}{Geogebra}, per vedere nel dettaglio i grafici delle funzioni
 		
-		- Geogebra (https://www.geogebra.org/graphing)
+		        \item \href{http://vc.di.unimi.it/}{Videolezioni} dei Prof. Tarallo e Cigoli (che seguivano grossomodo lo stesso programma), utili specialmente per le esercitazioni
 		
-		- Videolezioni (http://vc.di.unimi.it/)
+		        \item \href{https://goo.gl/9ADmUc}{Stampati lezioni del Prof. Gobbino} 
+		        
+		    \end{itemize}
+		}
 		
-		- Stampati lezioni del Prof. Gobbino (https://goo.gl/9ADmUc)
-		
-	\end{enumerate}
+	\end{QuestionList}
 	
 \end{document}
