--- a/faq_files/programmazione_2/programmazione_2.tex
+++ b/faq_files/programmazione_2/programmazione_2.tex
@@ -14,24 +14,22 @@
 \begin{document} 
 	\maketitle
 	
-	\begin{enumerate}
+	\begin{QuestionList}
 		
-		\rmfamily
-		\domanda{Dove si trova il sito web del corso?} 
-		Lo trovi qui sopra se premi "sito web".\\
+		\question{Dove si trova il sito web del corso?} {
+		     Si trova qui sopra cliccando "sito web".
+		 }
 		
-		\domanda{Com'è strutturato l'esame?} 
-		Al momento l'esame a distanza è strutturato nel seguente modo: c'è una prova pratica in cui si accede
-		in un ambiente con Visual Studio Code per svolgere il tema d'esame proposto. Se viene superata la prova
-		con almeno la sufficienza si accede all'orale, che consiste in una breve correzione della prova svolta
-		e alcune domande di teoria che si concentrano sugli argomenti dei libri proposti (Liskov e Bloch) e delle
-		spiegazioni fatte a lezione.\\
+		\question{Com'è strutturato l'esame?} {
+		    Al momento l'esame a distanza è strutturato nel seguente modo: c'è una prova pratica in cui si accede in un ambiente con Visual Studio Code per svolgere il tema d'esame proposto. \\
+		    Se viene superata la prova con almeno la sufficienza si accede all'orale, che consiste in una breve correzione della prova svolta e alcune domande di teoria che si concentrano sugli argomenti dei libri proposti (Liskov e Bloch) e delle spiegazioni fatte a lezione.
+		}
 		
 		
-		\domanda{Qual è il materiale a disposizione per studiare?} 
-		Avete i due libri citati prima su cui basarvi: quello della Liskov è fondamentale, e si consiglia
-		di leggere anche il Bloch.\\
-		
-	\end{enumerate}
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Avete i due libri citati prima su cui basarvi: quello della Liskov è fondamentale, e si consiglia
+		    di leggere anche il Bloch.
+		}
+	\end{QuestionList}
 	
 \end{document}
