--- a/faq_files/reti_di_calcolatori/reti_di_calcolatori.tex
+++ b/faq_files/reti_di_calcolatori/reti_di_calcolatori.tex
@@ -16,24 +16,26 @@
 \begin{document} 
 	\maketitle
 	
-	\begin{enumerate}
+	\begin{QuestionList}
 		
-		\rmfamily
-		\domanda{Dove si trova il sito web del corso?} 
-		Vi sono due siti per il corso, entrambi su Ariel; il primo riguarda la parte di teoria, mentre il secondo quella di laboratorio. Trovate i link all'inizio di queste FAQ.
+		\question{Dove si trova il sito web del corso?} {
+		    Vi sono due siti per il corso, entrambi su Ariel; \href{https://grossircc.ariel.ctu.unimi.it/v5/frm3/ThreadList.aspx?name=contenuti}{il primo} riguarda la parte di teoria, mentre \href{https://epaganircl.ariel.ctu.unimi.it/v5/frm3/ThreadList.aspx?name=contenuti}{il secondo} quella di laboratorio. 
 		
-		Fino all'AA 19-2020 il sito della parte di teoria si trovava a \href{http://old.nptlab.di.unimi.it/index.php/reti-di-calcolatori.html}{questo indirizzo}. \\
+		    Fino all'AA 19-2020 il sito della parte di teoria si trovava a \href{http://old.nptlab.di.unimi.it/index.php/reti-di-calcolatori.html}{questo indirizzo}. 
+	    }
 		
-		\domanda{Com'è strutturato l'esame?} 
-		L'esame è diviso in due parti: la prima parte consiste in uno scritto con domande inerenti gli argomenti trattati durante le lezioni di teoria e contribuisce al 60\% del voto finale; la seconda parte riguarda gli argomenti affrontati durante il laboratorio e contribuisce al 40\% del voto finale.
+		\question{Com'è strutturato l'esame?} {
+		    L'esame è diviso in due parti: la prima parte consiste in uno scritto con domande inerenti gli argomenti trattati durante le lezioni di teoria e contribuisce al 60\% del voto finale; la seconda parte riguarda gli argomenti affrontati durante il laboratorio e contribuisce al 40\% del voto finale.
 		
-		Quest'ultima è divisa in due prove, la prima riguarda la creazione di reti tramite software \href{https://en.wikipedia.org/wiki/Packet_Tracer}{CISCO Packet Tracer}, mentre la seconda riguarda la programmazione di reti tramite \href{https://docs.oracle.com/javase/8/docs/api/index.html?java/net/Socket.html}{socket Java}; il voto di questa seconda parte è dato dalla media delle due prove.
+		    Quest'ultima è divisa in due prove, la prima riguarda la creazione di reti tramite software \href{https://en.wikipedia.org/wiki/Packet_Tracer}{CISCO Packet Tracer}, mentre la seconda riguarda la programmazione di reti tramite \href{https://docs.oracle.com/javase/8/docs/api/index.html?java/net/Socket.html}{socket Java}; il voto di questa seconda parte è dato dalla media delle due prove.
 		
-		Il voto finale è dato dalla media pesata delle due parti; si accede alla seconda parte solo dopo aver superato la prima parte con un voto $\geq$ 13. \\
+		    Il voto finale è dato dalla media pesata delle due parti; si accede alla seconda parte solo dopo aver superato la prima parte con un voto $\geq$ 13. 
+		}
 		
-		\domanda{Qual è il materiale a disposizione per studiare?} 
-		Ci sono le videolezioni registrate, ed il libro di testo da integrare con le RFC disponibili sul \href{https://ietf.org/standards/rfcs/}{sito dell'IETF} (Internet Engineering Task Force).
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Ci sono le videolezioni registrate, ed il libro di testo da integrare con le RFC disponibili sul \href{https://ietf.org/standards/rfcs/}{sito dell'IETF} (Internet Engineering Task Force).
+		}
 		
-	\end{enumerate}
+	\end{QuestionList}
 	
 \end{document}
