--- a/faq_files/sistemi_operativi/sistemi_operativi.tex
+++ b/faq_files/sistemi_operativi/sistemi_operativi.tex
@@ -14,22 +14,27 @@
 \begin{document} 
 	\maketitle
 	
-	\begin{enumerate}
+	\begin{QuestionList}
 		
-		\rmfamily
-		\domanda{Dove si trova il sito web del corso?} 
-		Lo trovi qui sopra se premi "sito web".\\
+		\question{Dove si trova il sito web del corso?} {
+		     Si trova qui sopra cliccando "sito web".
+		 }
 		
-		\domanda{Com'è strutturato l'esame?} 
-		L'esame consiste in due prove scritte che solitamente vengono svolte nello stesso giorno, ovvero parte A e parte B.
-		La parte A tratta gli argomenti del corso fino alla gestione del processore inclusa, mentre la parte B il resto
-		del programma. Sono delle domande molto generali sui capitoli del libro.\\
+		\question{Com'è strutturato l'esame?} {
+		    L'esame consiste in due prove scritte che solitamente vengono svolte nello stesso giorno, ovvero parte A e parte B.
+		    
+		    La parte A tratta gli argomenti del corso fino alla gestione del processore inclusa, mentre la parte B il resto del programma.
+		    
+		    Sono delle domande molto generali sui capitoli del libro.
+		}
 		
 		
-		\domanda{Qual è il materiale a disposizione per studiare?} 
-		Sono disponibili delle videolezioni, altrimenti è consigliato usare il libro.
-		Qui invece trovate degli appunti di uno studente che possono essere molto utili ai fini dell'esame: \href{http://www.swappa.it/wiki/Uni/SistemiOperativi}{link}\\
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Sono disponibili delle videolezioni, altrimenti è consigliato usare il libro.
+		    
+		    Qui invece trovate degli appunti di uno studente che possono essere molto utili ai fini dell'esame: \href{http://www.swappa.it/wiki/Uni/SistemiOperativi}{link}
+		}
 		
-	\end{enumerate}
+	\end{QuestionList}
 	
 \end{document}
