--- a/faq_files/statistica_e_analisi_dei_dati/statistica_e_analisi_dei_dati.tex
+++ b/faq_files/statistica_e_analisi_dei_dati/statistica_e_analisi_dei_dati.tex
@@ -14,22 +14,25 @@
 \begin{document} 
 	\maketitle
 	
-	\begin{enumerate}
+	\begin{QuestionList}
 		
-		\rmfamily
-		\domanda{Dove si trova il sito web del corso?} 
-		Lo trovi qui sopra se premi "sito web".\\
+		\question{Dove si trova il sito web del corso?} {
+		     Si trova qui sopra cliccando "sito web".
+		 }
 		
-		\domanda{Com'è strutturato l'esame?} 
-		Attualmente (via telematica) l'esame consiste in una prova orale.\\
+		\question{Com'è strutturato l'esame?} {
+		    Attualmente (via telematica) l'esame consiste in una prova orale che verte su tutti gli argomenti del corso.
+		}
 		
-		\domanda{Qual è il materiale a disposizione per studiare?} 
-		Sono disponibili le videolezioni del corso, materiale integrativo e libri suggeriti dal docente.\\
+		\question{Qual è il materiale a disposizione per studiare?} {
+		    Sono disponibili le videolezioni del corso, materiale integrativo e libri suggeriti dal docente.
+		}
 		
-		\domanda{Che domande vengono fatte all'orale?}
-		Si possono trovare le domande fatte fin'ora (forse non del tutto aggiornate) al seguente
-		\href{https://colab.research.google.com/drive/1ASYHnmJWRo47sAbcHxhjAZErZjOZaKYP?usp=sharing}{link}.\\
+		\question{Che domande vengono fatte all'orale?} {
+		    Si possono trovare le domande fatte fin'ora (forse non del tutto aggiornate) al seguente
+		    \href{https://colab.research.google.com/drive/1ASYHnmJWRo47sAbcHxhjAZErZjOZaKYP?usp=sharing}{link}.
+		}
 		
-	\end{enumerate}
+	\end{QuestionList}
 	
 \end{document}
