Update del template

--- a/faq_files/template.tex
+++ b/faq_files/template.tex
@@ -8,7 +8,7 @@
 \title{FAQ - \textbf{Nome del corso}}
 
 \author{
-	Corso complementare / obbligatorio\\numero CFU, numero semestre\\
+	Corso complementare / obbligatorio (indica numero anno)\\Numero CFU, numero semestre\\
 	Docente: nome docente\\ 
 	\href{}{Sito web}
 	\date{}
@@ -34,7 +34,12 @@
 
 
     \question{Domanda 3} {
-        Risposta 
+        Risposta con elenco di roba
+        \begin{itemize}
+        	\item Roba 1
+        	\item Roba 2
+        	\item Roba 3
+        \end{itemize}
     }
  
 \end{QuestionList}
