--- a/faq_files/intelligenza_artificiale_1/intelligenza_artificiale_1.tex
+++ b/faq_files/intelligenza_artificiale_1/intelligenza_artificiale_1.tex
@@ -3,7 +3,7 @@
 \input{../pkgs}
 \input{../cmds}
 
-\title{FAQ - \textbf{Diritto dei prodotti digitali}}
+\title{FAQ - \textbf{Intelligenza Artificiale I}}
 \author{
 	Corso complementare \\6 CFU, Primo semestre\\
 	Docente: Nicola Basilico\\ 
