Replace underscores with hyphens front-end side
Handle eventual redirects

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,12 +1,8 @@
 Project maintainers:
 
-    Giuseppe Del Campo <gdeambo@yahoo.it>
+    Giuseppe Del Campo <giuseppe.delcampo@outlook.com>
     Marco Aceti <mail@marcoaceti.it>
-    Manuele Lucchi <manuele.lucchi@studenti.unimi.it>
-
 
 Contributors:
 
-    Giuseppe Roberti <>
-    Davide Busolin <>
-    Roberto Pinotti <>
+    https://github.com/StudentiUniMi/website/graphs/contributors
